<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sabber</string>
    <string name="history">History</string>
    <string name="downloading">Downloading</string>
    <string name="search">Search</string>
    <string name="search_hint">Search nzbindex.nl</string>
    <string name="menu_refresh">Refresh</string>
    <string name="settings">Settings</string>
    <string name="menu_pause">Pause</string>
    <string name="menu_play">Resume</string>

    <string name="title_select_category">Pick a category</string>
    <string name="title_loading">Loading. Please wait…</string>
    <string name="question_delete_nzb">Delete the selected NZB?</string>
    <string name="question_send_nzb">Send this NZB to download server?</string>

    <string name="option_delete_nzb">Delete item</string>
    <string name="option_change_category">Change category</string>
    <string name="option_positive">Yes</string>
    <string name="option_negative">No</string>
    <string name="text_time_finished">Estimated time finished:</string>
    <string name="text_total_size">Total download size:</string>
    <string name="text_itemname">name</string>
    <string name="text_time_left">Time left:</string>
    <string name="text_speed">Current speed:</string>

    <string name="notification_title_completed">NZB download completed</string>
    <string name="notification_title_failed">NZB download failed</string>
    <string name="notification_content_completed">%1$s download completed.</string>
    <string name="notification_content_failed">%1$s download failed.</string>

    <string name="advanced_pref">Advanced Preferences</string>
    <string name="port">Port</string>
    <string name="apikey">API key</string>
    <string name="pref_apikey_search_provider">API key search provider</string>
    <string name="hostname">Server address</string>
    <string name="pref_min_size_title">Minimal NZB size</string>
    <string name="pref_refresh_rate_title">Screen refresh rate</string>
    <string name="pref_notifications_title">Enable notifications</string>
    <string name="pref_notifications_summary">Enable background notifications</string>
    <string name="pref_notifications_refresh_rate_title">Notification service refresh rate</string>
    <string name="unavailable">unavailable</string>
    <string name="empty_list">No items to show in this view.</string>
    <string name="no_results">Geen resultaten</string>
    <string name="preferences">Preferences</string>
    <string name="connection_settings">Connections</string>
    <string name="pref_search_provider">Search Provider</string>
    <string name="pref_https">Enable https</string>
    <string name="pref_search_providers">Search Providers</string>
    <string name="pref_host_settings">Host</string>
    <string name="pref_theme_dark">Use dark theme</string>
    <string name="pref_connections">Connection settings</string>
    <string name="pref_preferences">Global app preferences</string>

    <string-array name="options_search_providers">
        <item>Usenet Crawler</item>
    </string-array>

    <string-array name="options_search_providers_values">
        <item>http://www.usenet-crawler.com</item>
    </string-array>

</resources>