<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
            android:name="Notifications Preference"
            android:key="notificationsPref"
            android:title="@string/pref_notifications_title"/>
    <EditTextPreference
            android:name="Minimal size Preference"
            android:inputType="number"
            android:key="minsizePref"
            android:title="@string/pref_min_size_title"/>
    <EditTextPreference
            android:name="Screen refresh rate Preference"
            android:inputType="number"
            android:key="screenRefreshratePref"
            android:defaultValue="10"
            android:title="@string/pref_refresh_rate_title"/>
    <EditTextPreference
            android:name="Notifications refresh rate Preference"
            android:inputType="number"
            android:key="notificationsRefreshratePref"
            android:defaultValue="60"
            android:title="@string/pref_notifications_refresh_rate_title"/>

</PreferenceScreen>
